# BgSocManagementSystem

./: .gitignore  CMakeLists.txt  Makefile  README.md  helper_functions.c  helper_functions.h  main  main.c  system_functions.c  system_functions.h
main_functions/: add_member.c  add_member.h  delete_record.c  delete_record.h  list_records.c  list_records.h  menu.c  menu.h  modify_record.c  modify_record.h
